--- a/Project-files/style.scss
+++ b/Project-files/style.scss
@@ -1,18 +1,36 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body {
     font-family: "poppins", sans-serif;
 }
 .title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
     h2 {
-        display: flex;
-    justify-content: center;
+        font-size: 45px;
     }
-    width: 500px;
-    height: 100px;
-    position: absolute;
-    top: 10vh; /* Eleman, ekranın üstünden %10 uzaklıkta */
-    left: 40vw; /* Eleman, ekranın solundan %5 uzaklıkta */
+    .subtitle{
+        color: gray;
+    }
+}
+.time-line{
+    display: flex;
+    flex-direction: column;
+    .timeline-item {
+        text-align: center;
+    }
+}
+
+.changelog-btn {
+    display: flex;
+    color: #fff;
+    background-color: black;
+    padding: 15px;
+    border-radius: 15px;
 }
