--- a/Project-files/style.scss
+++ b/Project-files/style.scss
@@ -20,17 +20,34 @@ body {
     }
 }
 .time-line{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    justify-content: center;
+    align-items: center;
     .timeline-item {
-        text-align: center;
+        display: flex;
+        gap: 30px;
+        margin: 20px;
+    }
+    .date{
+        display: flex;
+        color: gray;
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
-
-.changelog-btn {
+.arrow {
+    color: #333;
+}
+.button-bar{
+    padding-top: 50px;
+    padding-bottom: 50px;
     display: flex;
+    justify-content: center;
+    .changelog-btn {
     color: #fff;
     background-color: black;
     padding: 15px;
     border-radius: 15px;
+    }
 }
+
